Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML com CCS3</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque optio, natus dicta officia veniam iusto eveniet voluptatem illum, doloribus animi facilis. Doloremque dignissimos ullam adipisci pariatur deleniti consectetur quae nam?</p>
         </article>
         <article>
-            <h2>artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed voluptates veniam laborum ut consequatur at provident. Eum veritatis eveniet saepe. Rerum explicabo nobis dignissimos sequi quibusdam quia optio expedita esse.</p>
         </article>
     </main>
     
